added back hangingarden base component, as it was needed for the ArgsTable

--- a/src/components/data/HangingGarden/__stories__/HangingGarden.stories.mdx
+++ b/src/components/data/HangingGarden/__stories__/HangingGarden.stories.mdx
@@ -2,10 +2,9 @@
 
 import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 import GardenDemo,{CurrentContext} from './GardenDemo';
+import HangingGarden from '../'
 
 <Meta title="Data/Hanging Garden" component={GardenDemo} />
-
-
 
 export const Garden = () => (<GardenDemo/> )
 
