--- a/src/components/data/HangingGarden/__stories__/HangingGarden.stories.mdx
+++ b/src/components/data/HangingGarden/__stories__/HangingGarden.stories.mdx
@@ -163,20 +163,20 @@ export const Garden = () => (<GardenDemo/> )
 
 
 
-## Creating your own Hanging Garden 
+## Creating our own Hanging Garden 
   While the Hanging Garden component does a lot of the heavy lifting in terms of how and when the garden renders. 
   Or how to interact with the underlying PIXI.js engine. 
   It still requires quite a few inputs to get it working properly. 
 
-  This sections will guide you though how to make a similar garden as the one in the example on top. 
+  This sections will guide us though how to make a similar garden as the one in the example on top. 
   While also talking about some more advanced features that is not used here. 
 
-  Be aware that it will demand a decent time investment setting up your own Hanging Garden from scratch. 
+  Be aware that it will demand a decent time investment setting up a Hanging Garden from scratch. 
 
 ### Getting Started - Data source 
-  First things first, you will need a data source. 
-  The data can be what ever you need it to be, but you should be aware of its model.
-  Hanging Garden component is generic and takes in the model of the data you will be using. 
+  First things first, we will need a data source. 
+  The data can be what ever we need it to be, but we should be aware of its model.
+  Hanging Garden component is generic and takes in the model of the data we will be using. 
 
   ```jsx
   <HangingGarden<T> {...props} />
@@ -188,11 +188,11 @@ export const Garden = () => (<GardenDemo/> )
   ```
 
 ### Creating Columns 
-  Now that you have data and know what type of data you will be working with. 
+  Now that we have data and know what type of data we will be working with. 
   We can setup the columns structure. 
 
   This is all up to how its implemented. 
-  The component has no recognition of how the columns are layed out, or how you sorted them. 
+  The component has no recognition of how the columns are layed out, or how we sorted them. 
   Its just want an array full off HangingGardenColumn objects.
 
   in our example we will sort the data by year/week. Meaning each column represents a week in given year. 
@@ -235,12 +235,12 @@ export const Garden = () => (<GardenDemo/> )
   Sorting the Items withing each columns is also something one should consider. 
 
 #### highlightedColumnKey
-  This is a good time to setup our highlightedColumn key if you want to use one. 
+  This is a good time to setup our highlightedColumn key if we want to use one. 
   Our example uses the current week as a highlighted column as shown above. 
   You want to make sure that this key string is also sent in to the garden. 
 
 ### Creating headers 
-  before creating your header, we should consider our header height. 
+  before creating our header, we should consider our header height. 
   We might not now how big it should be. 
   Do we need to calculate it or is it static ?  
   In our example its a static 40. 
@@ -299,8 +299,8 @@ export const Garden = () => (<GardenDemo/> )
   Just be aware of the placement of the node. 
 
   We can also add graphics.  
-  On the context you will find context.graphics. 
-  This is the PIXI.Graphics object. It gives you a lo of freedom to create shapes and color in your header. 
+  On the context we will find context.graphics. 
+  This is the PIXI.Graphics object. It gives us a lot of freedom to create shapes and color in our header. 
   It would be advisable to look up the documentation for PIXI if you see the need for this. 
 
   a quick example for this 
@@ -309,9 +309,9 @@ export const Garden = () => (<GardenDemo/> )
   context.graphics.drawRoundedRect(0,context.height - 5,context.width,5,4);
   context.graphics.endFill();
   ```
-  This will draw a green line though your header. 
+  This will draw a green line though our header. 
   BeginFill to chose color, start the drawing. 
-  drawRoundedRect is a rectangle with rounded corner. You then add its coordinates inside the header as arguments. 
+  drawRoundedRect is a rectangle with rounded corner. We then add its coordinates inside the header as arguments. 
   where 0,0 is top left. Last argument is radius (rounded corner degree).
   This can for example be used to create a progress bar effect. 
 
@@ -349,7 +349,7 @@ Then the itemHeight and itemWidth. but again these can be easily adjusted if we 
   This function takes in a string, this is used as an identifier. Preferably unique. 
   Then it takes a functions which will received the context object. 
   
-  In this function you will draw everything you need onto our item. 
+  In this function we will draw everything we need onto our item. 
   ```jsx
   context.enquedRender(item.workOrderNumber, (context) => {
     const textNode = context.createTextNode(
@@ -392,10 +392,10 @@ context.addDot(getMatStatusColor(item), { x: context.width - 12, y: 8 });
 We get a different color again based on the item. 
 Then place it in the top right corner. 
 
-You can add as multiple context.addDot to your renderItem function
+We can add multiple context.addDot to the renderItem function
 
 ##### context.addPopover 
-This function is a hover effect for your item. 
+This function is a hover effect for our item. 
 It takes in a hit area and a function that returns the component we want to show. 
 
 The hit are will need to be a PIXI shape. In most cases a rectangle will be a good fit. 
@@ -417,27 +417,25 @@ We just need to make sure we get our position and sizes right.
 
 ### Some useful hooks 
 The Garden component comes with some hooks that can be useful. 
-These are not implemented in the garden in anyway, but can be used if you find them helpful. 
+These are not implemented in the garden in anyway, but can be used if found helpful. 
 
 #### useHangingGardenData 
-This hooks fetched data based on the currentContext and the supplied endpoint.
-What this hook gives you is cache handling.
-It has built in functionality for cache invalidation and refetch data. 
-It also give you the cache Age. 
+This hooks fetches data based on the currentContext and the supplied endpoint.
+It also has built in functionality for cache invalidation and refetch data. 
+That includes handling cache age. 
 This is used in many Garden to give the user an indication of how old the data is. 
 Also the ability to update the cache at will. 
 
 #### useHangingGardenErrorMessage
 This hook work well along side the useHangingGardenData hook. 
 It take care of all know error or replies that can comeback from typical Hanging Garden endpoints.
-You can take the error from useHangingGardenData and feed it into the hook. 
-It will then either give you a errorMessage object back. That you can use with the standard error message boundary. 
+The returned error from useHangingGardenData  can be feed directly into the this hook.
+An errorMessage object will then be created, that again can be directly used by the default errorMessage component. 
+No manual error check needs to be done. The hook handles this also. If there is no error, the errorMessage object will be flagged as such.
+Handles errors are typical no data and "catch all" error. 
+but also more garden typical errors for noCache and no access. 
 
-You don't need to do check if there are error as the hook will handle this for you. 
-And return a object with noError flag set. 
-Else it will give back a proper response depending on Error. 
-Outside of normal noData and general errors. 
-It will handle noCache errors and access errors. 
+
   
   
 
